--- a/src/components/GithubCard.astro
+++ b/src/components/GithubCard.astro
@@ -15,7 +15,7 @@ const repo = await octokit.repos
   target="_blank"
   rel="nofollow noopener noreferrer"
   aria-label={`Check out the github repo: ${repo.name}. ${repo.description}`}
-  class={`group flex gap-2 flex-col rounded-md bg-2 p-4 hover:outline-2
+  class={`group flex gap-2 flex-col rounded-md bg-2 p-4 shadow hover:outline-2
           hover:outline hover:outline-brand-1 hover:outline-offset-4`}
 >
   <div class="flex items-center gap-2">
