--- a/src/components/PostCard.astro
+++ b/src/components/PostCard.astro
@@ -11,8 +11,9 @@ const { post } = Astro.props;
   <a
     href={`/blog/${post.slug}`}
     aria-label={`${post.data.title}. ${post.data.description}`}
-    class={`group flex h-full flex-col rounded-md bg-2 p-4 hover:outline-2 hover:outline 
-          hover:outline-brand-1 hover:outline-offset-4`}
+    class={`group flex h-full flex-col rounded-md bg-2 p-4 shadow
+            hover:outline-2 hover:outline hover:outline-brand-1
+            hover:outline-offset-4`}
   >
     <span class="text-brand-2 text-base group-hover:text-brand-1">
       {post.data.title}
