--- a/src/pages/career.astro
+++ b/src/pages/career.astro
@@ -21,7 +21,7 @@ const roles = await getCollection('roles').then(async (roles) =>
     <div class="flex flex-col gap-8">
       {
         roles.map(({ role, Content }) => (
-          <div class="bg-2 rounded-md p-4">
+          <div class="bg-2 rounded-md p-4 shadow">
             <h3 class="text-brand-2 text-xl">{role.company}</h3>
             <div class="text-1 text-base">
               <Date>{role.start}</Date> -
