--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -11,8 +11,9 @@ const posts = (await getCollection('posts')).sort(
 <Layout title="Blog">
   <section class="mx-auto mt-fluid-3 flex max-w-screen-sm flex-col gap-fluid-2">
     <h1 class="text-4xl">Posts</h1>
+    <!-- prettier-ignore -->
     <ul class="flex flex-col gap-6">
-      {posts.map((post) => <PostCard post={post} />)}
+      {posts.map((post) => <li><PostCard post={post} /></li>)}
     </ul>
   </section>
 </Layout>
