--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -40,7 +40,7 @@ const posts = (await getCollection('posts'))
       <Picture
         src={import('@public/me.webp')}
         alt="A picture of me"
-        widths={[250, 320, 640, 960, 1280, 1600, 1920, 2560, 3840]}
+        widths={[250, 320, 2048]}
         sizes="(min-width: 1024px) 320px, 250px"
         class="relative rounded-full"
       />
