--- a/src/components/PostSubheader.astro
+++ b/src/components/PostSubheader.astro
@@ -10,7 +10,8 @@ const hash = slot.toLowerCase().replace(/ /g, '-');
     href={`#${hash}`}
     aria-label={slot}
     class={`absolute left-[-40px] top-1/2 hidden -translate-y-1/2 pr-4
-            opacity-0 group-hover:opacity-100 lg:block`}
+            opacity-0 group-hover:opacity-100 focus-visible:opacity-100
+            lg:block`}
   >
     <Link class="h-7 w-7 stroke-brand-1" aria-hidden />
   </a>
