--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -28,6 +28,11 @@ const {
     <meta name="og:site_name" content={Astro.site} />
     <meta name="og:image:width" content="1280" />
     <meta name="og:image:height" content="675" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:creator" content={`@${import.meta.env.USERNAME}`} />
+    <meta name="twitter:title" content={title} />
+    <meta name="twitter:description" content={description} />
+    <!-- <meta name="twitter:image" content={} /> -->
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <link href={new URL(Astro.url.pathname, Astro.site)} rel="canonical" />
   </head>
