--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -31,7 +31,7 @@ const { Content, injectedFrontmatter } = await post.render();
 <Layout title={post.data.title} description={post.data.description}>
   <article class="mx-auto mt-fluid-3 max-w-screen-sm">
     <h1 class="mb-fluid-2 text-3xl">{post.data.title}</h1>
-    <div class="flex flex-wrap gap-x-4 gap-y-2 text-1 text-sm">
+    <div class="flex gap-8 text-1">
       <div class="flex items-center gap-2">
         <Calendar class="w-5 h-5 stroke-brand-2" />
         <Date>{post.data.published}</Date>
@@ -40,13 +40,15 @@ const { Content, injectedFrontmatter } = await post.render();
         <Clock class="w-5 h-5 stroke-brand-2" />
         <span>{injectedFrontmatter.readingTime} Minutes</span>
       </div>
-      <PostViews slug={post.slug} />
     </div>
     <div class="my-8 h-1 rounded-md bg-2"></div>
     <div class="flex flex-col gap-12">
       <Content components={{ a: Anchor, h2: PostSubheader }} />
       {post.data.repo && <GithubCard repo={post.data.repo} />}
-      <div class="self-end"><PostTweet post={post} /></div>
+      <div class="flex flex-wrap items-center justify-between gap-2">
+        <PostViews slug={post.slug} />
+        <PostTweet post={post} />
+      </div>
       <div class="h-1 rounded-md bg-2"></div>
       <div class="flex justify-between gap-10">
         <a href={`/blog/${prev.slug}`} class="group flex gap-4">
