--- a/src/pages/career.astro
+++ b/src/pages/career.astro
@@ -15,7 +15,7 @@ const roles = await getCollection('roles').then(async (roles) =>
 );
 ---
 
-<Layout>
+<Layout title="Career">
   <section class="mx-auto mt-fluid-3 flex max-w-screen-sm flex-col gap-fluid-2">
     <h1 class="text-4xl">Career</h1>
     <div class="flex flex-col gap-8">
