✨ astro-og-canvas to gen blog post og images

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -10,7 +10,7 @@ const favicon = await import('@public/favicon.svg?raw');
 const {
   title = 'Christian Penrod | Front-End Web Developer',
   description = 'Developing for the web since 2015, based in Pittsburgh PA.',
-  og = 'og-default.webp',
+  og = 'og.webp',
 } = Astro.props;
 ---
 
