🔍 Better page titles

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -16,7 +16,7 @@ const {
 
 <html lang="en">
   <head>
-    <title>{title ? `${title} | Christian Penrod` : title}</title>
+    <title>{title}</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <meta name="title" content={title} />
