--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -8,7 +8,7 @@ const posts = (await getCollection('posts')).sort(
 );
 ---
 
-<Layout title="Blog">
+<Layout title="Blog | Christian Penrod">
   <section class="mx-auto mt-fluid-3 flex max-w-screen-sm flex-col gap-fluid-2">
     <h1 class="text-4xl">Posts</h1>
     <!-- prettier-ignore -->
