💄 Better wording if 1 min read

--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -42,7 +42,7 @@ const { Content, injectedFrontmatter } = await post.render();
       </div>
       <div class="flex items-center gap-2">
         <Clock class="w-5 h-5 stroke-brand-2" />
-        <span>{injectedFrontmatter.readingTime} Minutes</span>
+        <span>{injectedFrontmatter.readingTime} Min Read</span>
       </div>
     </div>
     <div class="my-8 h-1 rounded-md bg-2"></div>
