--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -25,7 +25,7 @@ const {
     <meta name="og:title" content={title} />
     <meta name="og:description" content={description} />
     <meta name="og:image" content={new URL(og, Astro.site)} />
-    <meta name="og:image:alt" content={Astro.url.pathname} />
+    <meta name="og:image:alt" content={title} />
     <meta name="og:site_name" content={Astro.site} />
     <meta name="og:image:width" content="1280" />
     <meta name="og:image:height" content="675" />
