--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -68,7 +68,7 @@ const { Content, remarkPluginFrontmatter } = await post.render();
   </article>
 </Layout>
 
-<style lang="scss" is:global>
+<!-- <style lang="scss" is:global>
   article {
     em {
       @apply tracking-wider;
@@ -106,4 +106,4 @@ const { Content, remarkPluginFrontmatter } = await post.render();
       }
     }
   }
-</style>
+</style> -->
