--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -4,6 +4,7 @@ import Date from '@components/Date.astro';
 import GithubCard from '@components/GithubCard.astro';
 import PostSubheader from '@components/PostSubheader.astro';
 import PostTweet from '@components/PostTweet.astro';
+import PostViews from '@components/PostViews.astro';
 import Layout from '@layouts/Layout.astro';
 import { CollectionEntry, getCollection } from 'astro:content';
 import { ArrowLeft, ArrowRight, Calendar, Clock } from 'lucide-preact';
@@ -23,7 +24,6 @@ export const getStaticPaths = async () => {
 type Post = CollectionEntry<'posts'>;
 type Props = { post: Post; prev: Post; next: Post };
 
-const components = { a: Anchor, h2: PostSubheader };
 const { post, prev, next } = Astro.props;
 const { Content, remarkPluginFrontmatter } = await post.render();
 ---
@@ -47,10 +47,10 @@ const { Content, remarkPluginFrontmatter } = await post.render();
     </div>
     <div class="my-8 h-1 rounded-md bg-2"></div>
     <div class="flex flex-col gap-12">
-      <Content components={components} />
+      <Content components={{ a: Anchor, h2: PostSubheader }} />
       {post.data.repo && <GithubCard repo={post.data.repo} />}
       <div class="flex flex-wrap items-center justify-between gap-2">
-        <!-- <PostViews slug={post.slug} /> -->
+        <PostViews slug={post.slug} />
         <PostTweet post={post} />
       </div>
       <div class="h-1 rounded-md bg-2"></div>
