--- a/src/components/PostSubheader.astro
+++ b/src/components/PostSubheader.astro
@@ -13,7 +13,7 @@ const hash = slot.toLowerCase().replace(/ /g, '-');
             opacity-0 group-hover:opacity-100 focus-visible:opacity-100
             lg:block`}
   >
-    <Link class="h-7 w-7 stroke-brand-1" aria-hidden />
+    <Link class="h-7 w-7 stroke-brand" aria-hidden />
   </a>
-  <span id={hash} class="text-brand-2 text-2xl">{slot}</span>
+  <span id={hash} class="text-brand text-2xl">{slot}</span>
 </h2>
