--- a/src/components/PostViews.astro
+++ b/src/components/PostViews.astro
@@ -7,8 +7,8 @@ type Props = { slug: CollectionEntry<'posts'>['slug'] };
 const { slug } = Astro.props;
 ---
 
-<div class="flex items-center gap-2 text-1">
-  <Eye class="h-6 w-6 stroke-brand-2" />
+<div class="flex items-center gap-2 text-2">
+  <Eye class="h-6 w-6 stroke-brand" />
   <span data-post-views={slug}>-- Views</span>
 </div>
 
