♻️ some unecessary styles

--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -11,7 +11,7 @@ import { ArrowLeft } from 'lucide-preact';
     <Anchor href="/">
       <div class="group flex items-center gap-4 text-lg">
         <ArrowLeft class="stroke-brand w-8 h-8" />
-        <span class="group:text-brand">Back To Home</span>
+        <span class="group-hover:text-brand">Back To Home</span>
       </div>
     </Anchor>
   </section>
