--- a/src/components/PostTweet.astro
+++ b/src/components/PostTweet.astro
@@ -17,9 +17,9 @@ href.searchParams.append('via', import.meta.env.USERNAME);
   target="_blank"
   rel="nofollow noopener noreferrer"
   aria-label="Share on Twitter"
-  class={`group flex items-center gap-2 rounded-md bg-2 py-2 px-4 shadow
+  class={`flex items-center gap-2 rounded-md bg-2 py-2 px-4 shadow
           hover:outline hover:outline-2 hover:outline-offset-4 hover:outline-brand`}
 >
   <Twitter class="h-6 w-6 stroke-brand" />
-  <span class="text-brand text-sm group-hover:text-brand">Share</span>
+  <span class="text-brand text-sm">Share</span>
 </a>
