--- a/src/components/GithubCard.astro
+++ b/src/components/GithubCard.astro
@@ -16,17 +16,17 @@ const repo = await octokit.repos
   target="_blank"
   rel="nofollow noopener noreferrer"
   aria-label={`Check out the github repo: ${repo.name}. ${repo.description}`}
-  class={`group flex gap-2 flex-col rounded-md bg-2 p-4 shadow hover:outline-2
-          hover:outline hover:outline-brand-1 hover:outline-offset-4`}
+  class={`flex gap-2 flex-col rounded-md bg-2 p-4 shadow hover:outline-2
+          hover:outline hover:outline-brand hover:outline-offset-4`}
 >
   <div class="flex items-center gap-2">
-    <Book class="stroke-brand-1 shrink-0 w-5 h-5" />
-    <span class="text-brand-2 group-hover:text-brand-1">{repo.name}</span>
+    <Book class="stroke-brand shrink-0 w-5 h-5" />
+    <span class="text-brand">{repo.name}</span>
   </div>
   <p class="font-semibold text-sm">{repo.description}</p>
   <div class="flex items-center gap-6 text-sm">
     <div class="flex items-center gap-2">
-      <div class="h-3 w-3 shrink-0 rounded-full bg-brand-1"></div>
+      <div class="h-3 w-3 shrink-0 rounded-full bg-brand"></div>
       <span>{repo.language}</span>
     </div>
     <div class="flex items-center gap-2">
