--- a/src/components/PostCard.astro
+++ b/src/components/PostCard.astro
@@ -10,15 +10,13 @@ const { post } = Astro.props;
 <a
   href={`/blog/${post.slug}`}
   aria-label={`${post.data.title}. ${post.data.description}`}
-  class={`group flex h-full flex-col rounded-md bg-2 p-4 shadow
-          hover:outline-2 hover:outline hover:outline-brand-1
+  class={`flex h-full flex-col rounded-md bg-2 p-4 shadow
+          hover:outline-2 hover:outline hover:outline-brand
           hover:outline-offset-4`}
 >
-  <span class="text-brand-2 text-base group-hover:text-brand-1">
-    {post.data.title}
-  </span>
+  <span class="text-brand text-base">{post.data.title}</span>
   <p class="font-semibold text-sm">{post.data.description}</p>
-  <div class="mt-auto pt-4 font-semibold text-2 text-xs">
+  <div class="mt-auto pt-4 font-semibold text-1 text-xs">
     <Date>{post.data.published}</Date>
   </div>
 </a>
