--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -5,7 +5,7 @@ import '@fontsource/nunito/800.css';
 
 type Props = { title?: string; description?: string; og?: string };
 
-const favicon = await import('@public/favicon.svg?raw');
+const logo = await import('@public/logo.svg?raw');
 const {
   title = 'Christian Penrod | Front-End Web Developer',
   description = 'Developing for the web since 2015, based in Pittsburgh PA.',
@@ -38,12 +38,12 @@ const {
   </head>
   <body
     class={`mx-auto flex min-h-screen max-w-screen-lg flex-col bg-1 font-sans
-            font-extrabold tracking-wide text-2 text-base px-fluid-4
-            selection:bg-brand-1 selection:bg-opacity-25`}
+            font-extrabold tracking-wide text-1 text-base px-fluid-4
+            selection:bg-brand selection:bg-opacity-25`}
   >
     <header class="flex items-center gap-4 py-4 text-sm">
-      <a href="/" class="mr-auto h-10 w-10 md:mr-8" aria-label="Home">
-        <Fragment set:html={favicon.default} aria-hidden />
+      <a href="/" class="mr-auto h-10 w-16 md:mr-4" aria-label="Home">
+        <Fragment set:html={logo.default} aria-hidden />
       </a>
       <Anchor href="/blog">Blog</Anchor>
       <Anchor href="/career">Career</Anchor>
@@ -51,7 +51,7 @@ const {
       <Anchor href={`mailto:${import.meta.env.EMAIL}`}>Email</Anchor>
     </header>
     <main class="mb-fluid-5 flex-1"><slot /></main>
-    <footer class="self-center p-2 text-center text-1 text-sm">
+    <footer class="self-center p-2 text-center text-2 text-sm">
       <p>Created by: Christian Penrod ©{new Date().getUTCFullYear()}</p>
       <p>
         Built with: <Anchor href="https://docs.astro.build">Astro</Anchor>
