--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,7 +1,7 @@
 ---
 import Anchor from '@components/Anchor.astro';
-import '@fontsource/nunito/600.css';
-import '@fontsource/nunito/800.css';
+import '@fontsource/outfit/300.css';
+import '@fontsource/outfit/400.css';
 
 type Props = { title?: string; description?: string; og?: string };
 
@@ -38,7 +38,7 @@ const {
   </head>
   <body
     class={`mx-auto flex min-h-screen max-w-screen-lg flex-col bg-1 font-sans
-            font-extrabold tracking-wide text-1 text-base px-fluid-4
+            font-light tracking-wide text-1 text-base px-fluid-4
             selection:bg-brand selection:bg-opacity-25`}
   >
     <header class="flex items-center gap-4 py-4 text-sm">
