--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -91,7 +91,7 @@ const { Content, remarkPluginFrontmatter } = await post.render();
     }
 
     blockquote {
-      @apply rounded-md border-l-8 border-l-brand bg-2 p-4 font-semibold shadow;
+      @apply rounded-md border-l-8 border-l-brand bg-2 p-4 text-2 shadow;
     }
 
     details {
