--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -16,7 +16,7 @@ const posts = (await getCollection('posts'))
 <Layout>
   <section class="mt-fluid-5 flex justify-between gap-fluid-4">
     <div>
-      <h1 class="text-5xl">Hi, I'm Christian</h1>
+      <h1 class="font-normal text-5xl">Hi, I'm Christian</h1>
       <h2 class="text-2 text-2xl">Front-End Web Developer</h2>
       <ul class="mt-fluid-4 flex flex-col gap-fluid-1">
         <li class="flex flex-wrap items-center gap-x-2">
